# MCP_Auth

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  main.py  pyproject.toml  test_main.http
alembic/: env.py
alembic/versions/: 24d546efdc36_add_tenant_name_field_to_users_table.py  3972af504055_initial_schema.py  e340c902e215_add_tenant_name_field_to_tenants_table.py  e9258cf92b4d_add_tenant_based_authentication.py
app/: __init__.py  config.py  database.py  dependencies.py
app/core/: __init__.py  exceptions.py  security.py
app/models/: __init__.py  tenant.py  token.py  user.py
app/repositories/: tenant_repository.py  token_repository.py  user_repository.py
app/routes/: auth.py  protected.py  tenants.py  well_known.py
app/schemas/: auth.py  tenant.py  totp.py  user.py
app/services/: auth_service.py  jwt_service.py  oauth2_service.py  tenant_service.py  totp_service.py
docs/: ENDPOINTS.md  PLAN.md  RUNNING.md  SCHEMAS.md  TENANT_REFACTORING.md  USER_MANUAL.md  WORKFLOWS.md
tests/: __init__.py  conftest.py
tests/integration/: test_auth_endpoints.py  test_protected_endpoints.py  test_tenant_cascade_endpoints.py  test_totp_flow.py
tests/unit/: README.md  test_auth_schemas.py  test_auth_service.py  test_cascade_updates.py  test_database.py  test_dependencies.py  test_exceptions.py  test_jwt_service.py  test_models.py  test_oauth2_service.py  test_security.py  test_tenant_repository.py  test_tenant_service.py  test_token_repository.py  test_totp_schemas.py  test_totp_service.py  test_user_repository.py  test_user_schemas.py
