[project]
name = "mcp-auth"
version = "0.1.0"
description = "MCP-compatible Authentication & User Management Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.126.0",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.19",
    "pydantic-settings>=2.7.0",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",
    "faker>=34.0.0",
]
